compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_function_call.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod\n\nfn func() {\n  mod   .   function()\n}\n"
---
----- BEFORE RENAME
-- mod.gleam
pub fn function() { todo }

-- app.gleam

import mod

fn func() {
  mod   .   function()
  ↑▔▔                 
}


----- AFTER RENAME
-- mod.gleam
pub fn function() { todo }

-- app.gleam

import mod as module

fn func() {
  module   .   function()
}
