compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_import_namespaced_with_unqualified_member_and_alias.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "import     testing  / mod . {   str   ,  type    Type  }   as     module"
---
----- BEFORE RENAME
-- testing/mod.gleam

pub const str = "string"
pub type Type { Variant }


-- app.gleam
import     testing  / mod . {   str   ,  type    Type  }   as     module
                                                                  ↑▔▔▔▔▔


----- AFTER RENAME
-- testing/mod.gleam

pub const str = "string"
pub type Type { Variant }


-- app.gleam
import     testing  / mod . {   str   ,  type    Type  }   as alias
